# cocktail-cabinet

./: .env.example  README.md  main.py  pyproject.toml
.claude/plans/: CC-10.md  CC-11.md  CC-12.md  CC-13.md  CC-15.md  CC-16.md  CC-17.md  CC-18.md  CC-19.md  CC-2.md  CC-4.md  CC-5.md  CC-6.md  CC-7.md  CC-8.md  CC-9.md
examples/: Cocktail Log.md  Pantry.md  Preferences.md
src/: config.py  gemini_client.py  main.py  mood.py  orchestrator.py
src/agents/: bartender.py  shopper.py  taste.py
src/tools/: categoriser.py  declarations.py  vault_reader.py  vault_writer.py
tests/: conftest.py  test_bartender.py  test_categoriser.py  test_declarations.py  test_gemini_client.py  test_main.py  test_mood.py  test_orchestrator.py  test_shopper.py  test_taste.py  test_vault_reader.py  test_vault_writer.py
vault_templates/: Cocktail Log.md  Cocktail Suggestions.md  Pantry.md  Preferences.md
