[project]
name = "cocktail-cabinet"
version = "0.1.0"
description = "A CLI tool that suggests cocktails based on your pantry, mood, and preferences"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "google-genai>=1.68.0",
    "python-dotenv>=1.2.2",
]

[project.scripts]
cocktail-cabinet = "src.main:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
]
